fix: nav bar on mobile

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -3,7 +3,7 @@ $tf-media-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 1024px,
-  xl: 1399px
+  xl: 1299px
 ) !default;
 
 $tf-state-colors: (
